syntax = "proto3";

package avs;

enum AVSConfigStatus {
    Success = 0;
    InvalidParam = 1;
    InvalidState = 2;
}

message CmdGetDetails {
    uint32 Dummy = 1;
}
message RespGetDetails{
    AVSConfigStatus Status = 1;
    string Version = 2;
    string CodeChallenge = 3;
    string DSN = 4;
    string ProductID = 5;
}

message CmdSetConfig {
    string AuthCode = 1;
    string ClientID = 2;
    string RedirectURI = 3;
}

message RespSetConfig{
    AVSConfigStatus Status = 1;
    uint32 Dummy = 2;
}

message CmdSignInStatus {
    uint32 Dummy = 1;
}

message RespSignInStatus {
    AVSConfigStatus Status = 1;
}

message CmdSignOut {
    uint32 Dummy = 1;
}

message RespSignOut {
    AVSConfigStatus Status = 1;
}

enum AVSConfigMsgType {
    TypeCmdGetDetails = 0;
    TypeRespGetDetails = 1;
    TypeCmdSetConfig = 2;
    TypeRespSetConfig =3;
    TypeCmdSignInStatus = 4;
    TypeRespSignInStatus = 5;
    TypeCmdSignOut = 6;
    TypeRespSignOut = 7;
}

message AVSConfigPayload {
    AVSConfigMsgType msg = 1;
    oneof payload {
        CmdGetDetails cmd_get_details = 10;
        RespGetDetails resp_get_details = 11;
        CmdSetConfig cmd_set_config = 12;
        RespSetConfig resp_set_config = 13;
	CmdSignInStatus cmd_signin_status = 14;
	RespSignInStatus resp_signin_status = 15;
	CmdSignOut cmd_sign_out = 16;
	RespSignOut resp_sign_out = 17;
    }
}